Updated the visuals of the site as well as positioning of elements

--- a/index.html
+++ b/index.html
@@ -11,25 +11,19 @@
  
 <body>
 
-<div id="header">
-<h1>League Of Legends Stat Viewer</h1>
-</div>
-
-<div id="nav">
-About Me<br>
-About Website<br>
-Ugly ass nav bar<br>
-</div>
-
 <div id="section">
-
-<img id = "mainImg" src = 'http://orig04.deviantart.net/07eb/f/2013/274/a/5/league_of_legends_windows_8_tile_icon_by_intel_4004-d6ovotm.jpg'>
-<input id = "sName" type = "text" placeholder = "Summoner Name">
-<input type = "submit" onclick = "makeSummoner()">
-<p>Summoner ID: <span id="number"></span></p>
-<div id="footer">
-Copyright © W3Schools.com
+		<center>
+		<img id = "mainImg" src = 'http://orig04.deviantart.net/07eb/f/2013/274/a/5/league_of_legends_windows_8_tile_icon_by_intel_4004-d6ovotm.jpg'>
+		<br/>
+		<br/>
+		<h1 id="title">LoL Statistics</h1>
+		</center>
+		<div class="form">
+			<input id = "sName" type = "text" placeholder = "Summoner Name">
+			<input type = "submit" onclick = "makeSummoner()">
+			<p>Summoner ID: <span id="number"></span></p>
+		</div>
+		
 </div>
-
 </body>
 </html>
