Completed updated all page visuals and fixed alignment issue

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 		</center>
 		<div class="form">
 			<input id = "sName" type = "text" placeholder = "Summoner Name">
-			<input type = "submit" onclick = "makeSummoner()">
+			<br/>
+			<input class="button" type = "submit" onclick = "makeSummoner()">
 			<p>Summoner ID: <span id="number"></span></p>
 		</div>
 		
