--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-   <script src="getData.js"></script>
+   <script src="test.js"></script>
 </head>
  
 <body>
