Updated ID names, about to implement Most played champs

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 				<br/>
 				<input class="button" id = "submitbutton" type = "submit">
 				<h1 class="title">Stats</h1>
-				<ul id="stats"></ul>
+				<ul id="summonerInfo"></ul>
+				<ul id ="topchamps"></ul>
 			</div>
 		</div>
 		</center>
