--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 	</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel = "stylesheet" type = "text/css" href = "css/jquery-ui.min.css">
+	<link rel = "stylesheet" type = "text/css" href = "css/jquery.dataTables.min.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
    <script src = "js/jquery-ui.min.js"></script>
+   <script src = "js/jquery.dataTables.min.js"></script>
    <script src = "js/getData.js"></script>
 </head>
  
