Added Table for most played, having issue getting sID in different function

--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
 				<input class="button" id = "submitbutton" type = "submit">
 				<h1 class="title">Stats</h1>
 				<ul id="summonerInfo"></ul>
-				<ul id ="topchamps"></ul>
+				<table class = "mostPlayed">
+					<thead>
+						<tr>
+							<th>Champ Name</th>
+							<th>Wins</th>
+							<th>Losses</th>
+						</tr>
+					</thead>
+				</table>
+
 			</div>
 		</div>
 		</center>
